2008-12-15  Hans-Peter Nilsson  <hp@axis.com>

	* ld-cris/got7.s: Correct .size expression.
	* ld-cris/tls-e-20a.d: Adjust accordingly.

2008-12-04  Nick Clifton  <nickc@redhat.com>

	* ld-x86-64/ifunc.d: New test (of STT_IFUNC for x86_64).
	* ld-x86-64/ifunc.s: Source file for new test.
	* ld-x86-64/x86-64.exp: Run the new test.
	* ld-i386/ifunc.d: Tidy up regexps for expected output.

2008-12-03  Nick Clifton  <nickc@redhat.com>

	* ld-mips-elf/reloc-1-n32.d: Updated expected output for reloc
	descriptions.
	* ld-mips-elf/reloc-1-n64.d: Likewise.
	* ld-i386/ifunc.d: New test.
	* ld-i386/ifunc.s: Source file for the new test.
	* ld-i386/i386.exp: Run the new test.

2008-11-25  Joseph Myers  <joseph@codesourcery.com>

	* ld-arm/thumb2-bl-undefweak.d, ld-arm/thumb2-bl-undefweak.s: New.
	* ld-arm/arm-elf.exp: Run thumb2-bl-undefweak test.

2008-11-25  Hans-Peter Nilsson  <hp@axis.com>

	* ld-cris/got7.s, ld-cris/init.s, ld-cris/pic-gc-72.d,
	ld-cris/pic-gc-72.s, ld-cris/pic-gc-73.d, ld-cris/pic-gc-73.s,
	ld-cris/tls-dso-x1x2-1.d, ld-cris/tls-dso-xz-1.d,
	ld-cris/tls-dtprelm.s, ld-cris/tls-e-20.d, ld-cris/tls-e-20a.d,
	ld-cris/tls-e-21.d, ld-cris/tls-e-22.d, ld-cris/tls-e-23.d,
	ld-cris/tls-e-66.d, ld-cris/tls-err-20x.d, ld-cris/tls-err-24.d,
	ld-cris/tls-err-25.d, ld-cris/tls-err-26.d, ld-cris/tls-err-27.d,
	ld-cris/tls-err-28.d, ld-cris/tls-err-29.d, ld-cris/tls-err-31.d,
	ld-cris/tls-err-33.d, ld-cris/tls-err-35.d, ld-cris/tls-err-37.d,
	ld-cris/tls-err-39.d, ld-cris/tls-err-40.d, ld-cris/tls-err-41.d,
	ld-cris/tls-err-43.d, ld-cris/tls-err-44.d, ld-cris/tls-err-45.d,
	ld-cris/tls-err-47.d, ld-cris/tls-err-48.d, ld-cris/tls-err-49.d,
	ld-cris/tls-err-51.d, ld-cris/tls-err-52.d, ld-cris/tls-err-53.d,
	ld-cris/tls-err-55.d, ld-cris/tls-err-55.s, ld-cris/tls-err-56.d,
	ld-cris/tls-err-56.s, ld-cris/tls-err-62.d, ld-cris/tls-err-62.s,
	ld-cris/tls-err-65.d, ld-cris/tls-err-67.d, ld-cris/tls-gc-68.d,
	ld-cris/tls-gc-69.d, ld-cris/tls-gc-70.d, ld-cris/tls-gc-71.d,