@@ -1,0 +1,1 @@
+TST2 { local: dsofn; dsofn2; dsofn4; dsofn6; dsofn8; };
